# kube-freshener

./: .gitignore  Cargo.toml  README.md  config.yaml  ignore-list.yaml  indepDeplCheck.ts  k8sTypes.ts  package-lock.json  package.json
controlled-exp/: catalogue-srv.yaml  mongo-prods-Deployment.yaml  mysql-Deployment.yaml  user-manager-srv.yaml
controlled-exp/Istio/: cart-DestinationRule.yaml  mysql-virtual-service.yaml  shipping-virtual-service.yaml
data:examples/case-study/: catalog-virtual-service.yaml  order-Service.yaml
data:examples/controlled-exp/: cart-Deployment.yaml  (+3 more)
freshener/: Cargo.toml  config.yaml  ignore-list.yaml  known-images.yaml  todo.txt
freshener/mTOSCA/: mtosca.yaml  simple-micro-tosca.yml
freshener/manifests/: apache-Deployment.yaml  apache-Service.yaml  cart-Service.yaml  cart.yaml  catalogue-depl.yaml  catalogue.yaml  categories-Deployment.yaml  categories.yaml  comments-depl.yaml  customer-Deployment.yaml  magic_depl.yaml  mongo-orders-srv-Service.yaml  mongo-orders.yaml  mongodb.yaml  myapp-pod.yaml  mysql-users-Deployment.yaml  mysql-users-depl.yaml  mysql-users-srv-Service.yaml  mysql.yaml  payments-Deployment.yaml  payments.yaml  posts-srv.yaml  rabbitmq.yaml  shipping.yaml  user-manager.yaml
freshener/manifests/Istio/: dest-rules.yaml  products-DestinationRule.yaml
freshener/manifests/pippo/: comments-depl.yaml
freshener/src/: cmd_handler.rs  config_type.rs  freshener.rs  k8s_types.rs  main.rs  tosca_types.rs  yaml_handler.rs
src/: cmd_handler.rs  freshener.rs  k8s_types.rs  main
test-manifests/: indepDepl.yaml
(+29 files in other folders)
